# hypetrigger-rust

./: .gitignore  Cargo.toml  README.md
book/src/: SUMMARY.md  ffmpeg.md  input-video.md  other-languages.md
book/src/triggers/: wasm.md
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  index.ts  styles.css
docs/: book.toml
docs/src/: applications.md  other-languages.md  roadmap.md  threads.md  wasm.md
docs/src/triggers/: what-are-triggers.md
examples/js-canvas/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/js-canvas/src/: App.tsx  index.tsx
examples/rust-hello-world/: Cargo.toml
examples/rust-hello-world/src/: main.rs
examples/rust-simple/: Cargo.toml
examples/rust-simple/src/: main.rs
examples/rust-tesseract/: Cargo.toml
examples/rust-tesseract/src/: main.rs
examples/v2/: Cargo.toml
examples/v2/src/: main.rs
lib-js/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
lib-js/src/: crop.ts  hypetrigger.ts  index.ts  tensorflow.ts  tesseract.ts  trigger.ts
lib-js/src/ai/: tensorflow.ts  tesseract.ts
lib-js/src/filter/: _grayscale.ts  _identity.ts  _otsu.ts  index.ts  threshold.ts
lib-js/src/parse/: index.ts  regex.ts
lib-js/src/triggers/: TensorflowTrigger.ts  TesseractTrigger.ts  config.ts
lib-rust/: .gitignore  Cargo.toml  build.rs  package.json  vite.config.ts
lib-rust/src/: any.rs  async_trigger.rs  config.rs  debug.rs  debugger.rs  emit.rs  error.rs  ffmpeg.rs  image.rs  iter.rs  lib.rs  logging.rs  main.rs  main_thread.rs  photon.rs  pipeline.rs  pipeline_simple.rs  runner.rs  simple_trigger.rs  tensorflow.rs  tesseract.rs  tests.rs  threshold.rs  trigger.rs  util.rs
scripts/: clean-native.sh
